@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: Autotrace
+Description: a utility that converts bitmap to vector graphics
+Version: @VERSION@
+Requires: 
+Libs: -L@libdir@ -lautotrace @LIBPNG_LDFLAGS@ @MAGICK_LDFLAGS@ @LIBSWF_LDFLAGS@
+Cflags: -I@includedir@
